# CVProjects

./: .gitignore  README.md
ImageDelta/ImageDeltaCpp/: CMakeLists.txt  README.md
ImageDelta/ImageDeltaCpp/src/: ImageDeltas.cpp
ObjectTracking/ObjectTracker/: .gitignore  CMakeLists.txt  README.md  build.sh
ObjectTracking/ObjectTracker/Driver/: CMakeLists.txt
ObjectTracking/ObjectTracker/Driver/src/: ObjectTracker.cpp
ObjectTracking/ObjectTracker/Tracker/: CMakeLists.txt
ObjectTracking/ObjectTracker/autobuild/: unixbuild.sh  unixclean.sh  unixrun.sh  winbuild.sh  winclean.sh
ObjectTracking/ObjectTracker/headers/: VideoTracker.h
ObjectTracking/ObjectTracker/src/: ObjectTracker.cpp
ObjectTracking/ObjectTracker/tracker-main/: CMakeLists.txt  tracker-config.json
ObjectTracking/ObjectTracker/tracker-main/src/: ObjectTracker.cpp
ObjectTracking/ObjectTracker/videotracker/: CMakeLists.txt  README.md
ObjectTracking/ObjectTracker/videotracker/headers/: BoxTracker.h  ColorTracker.h  VideoTracker.h
ObjectTracking/ObjectTracker/videotracker/src/: ColorTracker.cpp  Default.cpp  VideoTracker.cpp
ObjectTracking/ObjectTrackerPy/: README.md  Rect.py  Tracker.py  main.py
